--- a/index.html
+++ b/index.html
@@ -12,35 +12,39 @@
   </head>
   <body>
     <div id="contenedor">
+
+      <!-- CABECERA -->
       <header>
         <nav>
 
-          <div>
-            <img src="img/logo.png" width="100px" alt="" srcset="" />
-      
-          </div>
+          <div><img src="img/logo.png" width="100px" alt="" srcset="" /></div>
 
-          <div>
-            <img src="img/llamada_telefonica.png" alt="" srcset="" />
-            600-333-016
-          </div>
-          <div>
-            <img src="img/email.png" alt="" srcset="" /> ALVOLANTE@gmail.com
-          </div>
-          <div>
-            <img src="img/ubicacion.png" alt="" srcset="" /> Av. de Europa, 15,
-            28922 Alcorcón, Madrid
-          </div>
+          <div><img src="img/llamada_telefonica.png" alt="" srcset="" />600-333-016</div>
+
+          <div><img src="img/email.png" alt="" srcset="" />ALVOLANTE@gmail.com</div>
+
+          <div><img src="img/ubicacion.png" alt="" srcset="" />Av. de Europa, 15,28922 Alcorcón, Madrid</div>
+
         </nav>
       </header>
-      <div id="tit">
+
+      <!-- IMAGEN Y ARGUMENTO -->
+      <div id="arg">
+
         <img src="img/inicio/inicio2.jpg" alt="Imagen reparación en taller">
-        <div>
+
+        <div id="tit">
+
           <p>TALLER AL VOLANTE</p>
           <p>El talller mejor preparado para la reparación de tu auto en madrid.</p>
-          <p>dgfvdvgd svsfgvdfff fsssssssssss sssssssssss sssssss</p>
+        </div>
+
+        <div>
+          <p></p>
         </div>
       </div>
+
+      <div><a href="https://AlVolanteMadrid.github.io/ALVOLANTEMARID" class="bot">VISITAR</a></div>
     </div>
   </body>
 </html>
