Texto de argumento añadido y animaciones de  cabecera.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ALVOLANTE MADRID</title>
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/styles.css" />
 
     <link rel="icon" type="image/x-icon" href="img/icono.ico">
 
@@ -45,7 +45,7 @@
 
           <div id="form2">
             <label for="nom">NOMBRE:</label><input type="text" id="nom">
-            <label for="ob">¿POR QUÉ ESTÁS INTERESADO?</label><textarea id="ob" cols="42" rows="5"></textarea>
+            <label for="ob">¿POR QUÉ ESTÁS INTERESADO EN NUESTRO TALLER?</label><textarea id="ob" cols="42" rows="5"></textarea>
           </div>
 
           <input type="submit" class="bot" value="ENVIAR">
@@ -55,7 +55,7 @@
 
       <!-- IMAGEN Y ARGUMENTO -->
       <div id="arg">
-
+        <h2>¿PORQUE ELEGIRNOS COMO SU TALLER?</h2>
         <div>
 
           <img src="img/inicio/inicio2.jpg" alt="Imagen reparación en taller">
@@ -68,12 +68,15 @@
           </div>
 
           <div>
-            <p></p>
+            <p>Nos encargamos con la máxima eficacia de las operaciones en su coche en mecánica, chapa y pintura, intercambio de neumáticos y mantenimiento de su vehículo.</p>
+            <p>Nuestros productos son respetuosos con el medio ambiente y nuestras instalaciones son las más modernas y cuentan con adaptación para todos los servicios.</p>
+            <p>Puedes pedir presupuesto de la forma más cómoda posible desde nuestra página web rellenando un sencillo formulario.</p>
+            <p>También nos encargamos de la restauración de vehículos clásicos.</p>
           </div>
         </div>
       </div>
 
-      <div><a href="https://AlVolanteMadrid.github.io/ALVOLANTEMARID" class="bot">VISITAR</a></div>
+      <div><a href="https://AlVolanteMadrid.github.io/ALVOLANTEMADRID" class="bot">VISITAR</a></div>
     </div>
   </body>
 </html>
