Añadido js de página en proceso

--- a/index.html
+++ b/index.html
@@ -76,7 +76,8 @@
         </div>
       </div>
 
-      <div><a href="https://AlVolanteMadrid.github.io/ALVOLANTEMADRID" class="bot">VISITAR</a></div>
+      <div><a class="bot" onclick="enProceso()">VISITAR</a></div>
     </div>
   </body>
+  <script src="js/javascript.js"></script>
 </html>
