Añadido título y argumento de formulario

--- a/index.html
+++ b/index.html
@@ -28,9 +28,17 @@
         </nav>
       </header>
 
+      <div id="titulo">
+        <h1>Taller Al Volante</h1>
+        <h3>Su taller de confianza en Madrid</h3>
+      </div>
+
       <!-- FORMULARIO -->
       <div id="form">
         <h2>Quiero recibir información y ofertas acerca del taller.</h2>
+        <h3>Ven a nuestro taller y recibirá la primera ITV de su coche completamente gratis. Además de un magnífico
+          descuento del 20% en el cambio de neumáticos durante su primer año.
+        </h3>
         <form action="#" method="POST" enctype="multipart/form-data">
 
           <div id="form1">
@@ -48,7 +56,7 @@
             <label for="ob">¿POR QUÉ ESTÁS INTERESADO EN NUESTRO TALLER?</label><textarea id="ob" cols="42" rows="5"></textarea>
           </div>
 
-          <input type="submit" class="bot" value="ENVIAR">
+          <input type="submit" class="bot" value="RECIBE SU ITV GRATUITA">
 
         </form>
       </div>
