--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         </div>
       </div>
 
-      <div><a class="bot" onclick="enProceso()">VISITAR</a></div>
+      <div><a class="bot" onclick="enProceso()">VISÍTANOS</a></div>
 
       <footer>
         <div>
@@ -98,8 +98,8 @@
 
           <div class="contactar"><img src="img/ubicacion.png" alt="" srcset="" />Av. de Europa, 15,28922 Alcorcón, Madrid</div>
 
-          <img src="img/instagram.png" alt="Logo instagram">
-          <img src="img/twitter.png" alt="Logo twitter">
+          <a href="https://www.instagram.com/"><img src="img/instagram.png" alt="Logo instagram"></a>
+          <a href="https://twitter.com/"><img src="img/twitter.png" alt="Logo twitter"></a>
         </div>
       </footer>
     </div>
