Cambio de imagenes redes sociales

--- a/index.html
+++ b/index.html
@@ -98,8 +98,8 @@
 
           <div class="contactar"><img src="img/ubicacion.png" alt="" srcset="" />Av. de Europa, 15,28922 Alcorcón, Madrid</div>
 
-          <a href="https://www.instagram.com/"><img src="img/instagram.png" alt="Logo instagram"></a>
-          <a href="https://twitter.com/"><img src="img/twitter.png" alt="Logo twitter"></a>
+          <a href="https://www.instagram.com/"><div class="rs"><img src="img/instagram.png" alt="Logo instagram"></div></a>
+          <a href="https://twitter.com/"><div class="rs"><img src="img/twitter.png" alt="Logo twitter"></div></a>
         </div>
       </footer>
     </div>
